# Mammon

./: .env.example  .gitignore  BUG_FIXES_AUTONOMOUS_RUNNER.md  CLAUDE.MD  DEPLOY_IDLE_CAPITAL_FIX.md  FIRST_LIVE_AUTONOMOUS_REBALANCE.md  FIXES_APPLIED.md  HISTORIC_FIRST_SWAP.md  IDLE_CAPITAL_SUCCESS.md  MAMMON_STATE_BRIEFING.md  NEXT_SESSION_CONTEXT.md  NEXT_SESSION_PHASE5.md  NEXT_SESSION_SPRINT4_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_KICKOFF.md  PHASE3_SPRINT1_COMPLETE.md  PHASE3_SPRINT2_COMPLETE.md  PHASE3_SPRINT3_COMPLETE.md  PHASE3_SPRINT3_PARTIAL_COMPLETE.md  PHASE3_STARTING_PROMPT.txt  PHASE4_HANDOFF.md  PHASE4_SPRINT1_COMPLETE.md  PHASE4_SPRINT2_COMPLETE.md  PHASE4_SPRINT2_TESTNET_SUCCESS.md  PHASE4_SPRINT3_24H_VALIDATION_STARTED.md  PHASE4_SPRINT3_COMPLETE.md  PHASE4_SPRINT3_FIRST_AUTONOMOUS_REBALANCE.md  PHASE4_SPRINT3_PROGRESS.md  PHASE4_SPRINT3_SESSION_HANDOFF.md  PHASE4_SPRINT4_ROADMAP.md  PHASE5_X402_ROADMAP.md  README.md  SESSION_SUMMARY.md  TODO.MD  pyproject.toml  pytest.ini
dashboard/: app.py
data/: autonomous_run_20251119_120321.json  autonomous_run_20251119_121517.json  autonomous_run_20251119_123518.json  autonomous_run_20251119_230651.json  autonomous_run_20251120_024536.json  autonomous_run_20251120_143054.json  autonomous_run_20251121_181252.json  autonomous_run_20251122_000743.json  autonomous_run_20251122_001241.json  autonomous_run_20251123_144104.json  autonomous_run_20251123_145311.json  autonomous_run_20251123_145752.json  autonomous_run_20251123_145922.json  autonomous_run_20251123_150014.json  autonomous_run_20251123_152502.json  autonomous_run_20251123_161729.json  autonomous_run_20251123_163143.json  autonomous_run_20251123_165536.json  autonomous_run_20251123_172641.json  autonomous_run_20251123_173019.json  autonomous_run_20251123_173400.json  autonomous_run_20251123_213711.json
docs/: SPRINT3_COMPETITIVE_MOAT.md  SPRINT_SUMMARY.md  VPS_DEPLOYMENT.md  api.md  architecture.md  demo_sprint3_guide.md  known_issues_sprint3.md  monitoring_guide.md  phase1b_findings.md  phase1c_integration_test_report.md  phase1c_sprint1_report.md  phase1c_sprint2_report.md  phase1c_sprint3_report.md  phase2a_sprint1_final_report.md  phase2a_sprint1_report.md  phase2a_sprint1_security_hardening.md  phase2a_sprint2_chainlink_integration.md  phase2a_sprint3_first_transaction.md  priority3_starting_prompt.md  profitability_gates.md  rollback_plan_sprint3.md  rpc_configuration.md  security.md  sprint3_handoff.md  sprint3_prompt.md  sprint3_success_criteria.md  sprint4_priority1_complete.md  sprint4_priority2_complete.md  test_results_sprint4_priority2.md  wallet_setup.md  wallet_transaction_signing.md  web3_integration_guide.md
migrations/: 003_add_positions_table.sql  004_add_yield_history_table.sql  005_add_rebalance_intents_table.sql
scripts/: backup_db.py  benchmark_cache_performance.py  benchmark_extended.py  cdp_show_account.py  check_bitquery_protocols.py  check_wallet_balance.py  debug_bitquery_api.py  demo_phase1c.py  demo_sprint1.py  demo_sprint2.py  demo_sprint3.py  deploy.py  detect_existing_positions.py  execute_first_autonomous_rebalance.py  execute_first_optimizer_rebalance.py  execute_first_swap.py  execute_first_transfer_simple.py  execute_first_wrap.py  execute_first_wrap_simple.py  export_cdp_wallet.py  generate_seed.py  get_cdp_wallet_address.py  get_wallet_address.py  heartbeat_check.py  list_cdp_wallets.py  mammon-backup.service  mammon-backup.timer  mammon-heartbeat.service  mammon-heartbeat.timer  mammon.service  mammon_first_real_swap.py  monitor_rpc_usage.py  preflight_check.py  resume_optimizer.py  run_autonomous_optimizer.py  setup.py  show_performance.py  show_wallet_address.py  test_aave_cycle.py  (+22 more)
(+144 files in other folders)
