[tool.poetry]
name = "mammon"
version = "0.1.0"
description = "Autonomous DeFi Yield Optimizer with x402 Integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"
langchain = "^0.3.0"
anthropic = "^0.39.0"
cdp-sdk = "^0.11.0"
web3 = "^7.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.0.0"
streamlit = "^1.39.0"
pandas = "^2.2.0"
requests = "^2.32.0"
aiohttp = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.0.0"
ruff = "^0.7.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
```

---

## **Next Steps: Claude Code Initialization Prompt**

Once you have these files in your repo, here's your **first prompt for Claude Code**:
```
I'm starting a new project called MAMMON - an autonomous DeFi yield optimizer for Base network with x402 protocol integration.

Please read the following files to understand the project:
- claude.md (master context and architecture)
- todo.md (development roadmap)

Current task: Complete the "Setup & Infrastructure" section of Phase 1.

Specifically:
1. Review the project structure in claude.md
2. Create the initial directory structure exactly as specified
3. Initialize Poetry with the pyproject.toml configuration
4. Create stub files for all modules (with docstrings and type hints)
5. Set up the basic configuration system (src/utils/config.py)
6. Create the structured logging system (src/utils/logger.py)

Security requirements:
- Never commit secrets
- Implement config with proper .env handling
- Add input validation to config loader
- Use type hints everywhere

After completing these tasks, provide:
- Summary of what was created
- Next recommended steps
- Any questions or concerns

Let's build this correctly from the start. Security and code quality are non-negotiable.
